HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeWait/Expected.uv
//! Expected diagnostic metadata for the SpeculativeWait rejected-source specimen.

expectedDiagnostic("E-CON-0092", "rule.19.K-Spec-No-Wait")
